#2213 Emrace the Java streams API